se agregó el main y un párrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Un encabezado interesante</h1>
+    <main>
+        <div class="uno">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vitae, quas aliquid odit beatae, nam optio obcaecati itaque enim reiciendis aperiam repellendus quo perferendis dolorem exercitationem. Laborum dolorum est excepturi id?</p>
+        </div>
+    </main>
 </body>
 </html>
