Se agregó un subtítulo y una barra de navegación

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Un encabezado interesante</h1>
+    <h2>Un sub encabezado interesante</h2>
+    <nav>
+        <a href="">Inicio</a>
+        <a href="">Servicios</a>
+        <a href="">Contacto</a>
+    </nav>
 </body>
 </html>
