se agregó un footer con una lista ordenada que contiene los datos de contacto

--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas possimus ab vel aperiam cumque, incidunt culpa delectus sint, consequatur dolorem quod quam necessitatibus quis sequi aliquam nostrum aspernatur tenetur.</p>
         </div>
     </main>
+    <footer>
+        <div class="footer">
+            <ol>
+                <li>Linkedin</li>
+                <li>Email</li>
+                <li>Teléfono</li>
+            </ol>
+        </div>
+    </footer>
 </body>
 </html>
